gcc/testsuite/gdc.test/runnable/imports/test19655b.d
import test19655c;
import test19655d;
class Garply: Grault
{ }
void main()
{
    (new Garply).func;
}
