gcc/testsuite/gdc.test/fail_compilation/fail4511.d
void test72()
{
    class A {}
    class B : A {}

    class X
    {
        abstract A func();
    }
    class Y : X
    {
        B func() { return new A(); }
    }
}

void main() {}
